python/testData/highlighting/malformedStringEscaped.py
# missing last quote, escaped
<error descr="Missing closing quote [']">'abc\'</error>